Prometheus/prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-clusterip
  namespace: monitoring
  labels:
    app: prometheus-server
spec:
  type: ClusterIP
  selector:
    app: prometheus-server
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
      
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-loadbalancer
  namespace: monitoring
  labels:
    app: prometheus-server
spec:
  type: LoadBalancer  
  selector:
    app: prometheus-server
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
